--- a/style.css
+++ b/style.css
@@ -155,6 +155,9 @@ text-align: center;
     height: 0.5rem;
     padding-right: 1rem;
 }
+.fa-regular{
+    font-size: 1.5rem;
+}
 .list{
     display: flex;
     justify-content: space-between;
@@ -262,7 +265,17 @@ color: #010101;
     position: relative;
     top: -10rem;
 }
-.see-more button{
+.see-more .seemore-button{
+    border: none;
+    padding: 9px 16px;
+    background-color: #fafafa;
+    font-family: Inter;
+font-size: 24px;
+font-weight: 400;
+line-height: 38px;
+letter-spacing: -0.04em;
+}
+.accessories{
     border: none;
     padding: 9px 16px;
     background-color: #fafafa;
